<resources>
    <string name="app_name">마이 익스피리언스</string>

    <string name="signin_title">로그인</string>
    <string name="signin_id_label">아이디</string>
    <string name="signin_id_hint">아이디를 입력해주세요.</string>
    <string name="signin_password_label">비밀번호</string>
    <string name="signin_login_btn">로그인</string>
    <string name="signin_signup_btn">회원가입</string>
    <string name="signin_password_hint">비밀번호를 입력해주세요.</string>
    <string name="signin_checkbox_text">아이디 기억하기</string>
    <string name="signin_find_id_text">아이디 찾기</string>
    <string name="signin_find_password_text">비밀번호 찾기</string>
    <string name="signin_iv_background_description">signin_iv_background</string>
    <string name="signup_iv_background_description">signup_iv_background</string>
    <string name="signin_failed">로그인에 실패했습니다.</string>
    <string name="signin_iv_gradient_description">signin_iv_gradient</string>

    <string name="signup_btn">회원가입</string>
    <string name="signup_id_label">아이디</string>
    <string name="signup_id_hint">아이디를 입력해주세요.</string>
    <string name="signup_id_double">이미 등록된 아이디입니다.</string>
    <string name="signup_name_label">이름</string>
    <string name="signup_name_hint">이름을 입력해주세요.</string>
    <string name="signup_password_label">비밀번호</string>
    <string name="signup_password_hint">비밀번호를 입력해주세요.</string>
    <string name="signup_password_check_label">비밀번호 확인</string>
    <string name="signup_password_check_hint">비밀번호를 입력해주세요.</string>
    <string name="signup_password_no_special">비밀번호에 특수문자가 반드시 포함되어야 합니다.</string>
    <string name="signup_password_unequal">비밀번호가 일치하지 않습니다.</string>
    <string name="signup_field_empty">"모든 값을 입력해주세요."</string>

    <string name="nav_reservation">예약</string>
    <string name="nav_program">프로그램</string>
    <string name="nav_schedule">일정</string>
    <string name="nav_mypage">마이</string>

    <string name="title_activity_notice_list">NoticeListActivity</string>

    <string name="main_title_top">HMG</string>
    <string name="main_title_bottom">Driving Experience</string>
    <string name="main_content">특별한 프로그램과 함께 현대, 기아, 제네시스의\n뛰어난 주행성능과 감성 그리고 가치를\n충분히 경험해보세요.</string>
    <string name="main_reservation">예약하기</string>
    <string name="main_iv_background_description">main_iv_background</string>

    <string name="program_experience_top">드라이빙</string>
    <string name="program_experience_bottom">익스피리언스</string>
    <string name="program_experience_content">트랙 주행 초심자부터 레이싱 입문자까지\n각자 실력에 맞는 드라이빙 스킬을 배울 수 있는\n체계적인 주행 교육 프로그램입니다.</string>
    <string name="program_pleasure_top">드라이빙</string>
    <string name="program_pleasure_bottom">플레저</string>
    <string name="program_pleasure_content">누구나 쉽게 자동차와 드라이빙 문화를 체험할 수 있는\n프로그램을 통해 즐거운 추억을 남겨보세요.</string>
    <string name="program_iv_top_description">program_iv_top</string>
    <string name="program_iv_bottom_description">program_iv_bottom</string>
    <string name="program_icon_arrow_description">program_icon_arrow</string>

    <string name="program_category_explain_hyundai">현대자동차와 함께 운전하는 즐거움을 경험하고 드라이빙 실력도 업그레이드 해보세요.</string>
    <string name="program_category_explain_kia">고성능 EV와 함께하는\n완전히 새로운 드라이빙 경험을 즐겨보세요.</string>
    <string name="program_category_explain_genesis">다양한 드라이빙 체험을 통해\n제네시스의 진정한 성능 그리고 새로운 매력을 느껴보세요.</string>
    <string name="program_category_explain_hmg">현대자동차와 함께 운전하는 즐거움을 경험하고\n드라이빙 실력도 업그레이드 해보세요.</string>


    <string name="program_category_iv_background_description">program_con</string>

    <string name="program_info_guide_btn">이용안내 ></string>
    <string name="program_duration_and_max_num">%1$s, 최대 %2$d인</string>
    <string name="program_info_car_title">교육 차량</string>8
    <string name="program_info_car_power_title">최고출력</string>
    <string name="program_info_car_torque_title">최대토크</string>
    <string name="program_info_iv_background_description">program_info_iv_background</string>
    <string name="program_info_icon_car_description">program_info_icon_car</string>
    <string name="program_info_icon_time_description">program_info_icon_time</string>
    <string name="program_info_icon_price_description">program_info_icon_price</string>
    <string name="program_info_icon_condition_description">program_info_icon_condition</string>
    <string name="program_info_iv_filter_black_description">program_info_iv_filter_black</string>
    <string name="program_info_iv_map_description">program_info_iv_map</string>
    <string name="program_info_tv_comment_username_default">이*호</string>
    <string name="program_info_tv_comment_date_default">2024년 1월 1일</string>
    <string name="program_info_tv_comment_content_default">결국 N Advanced까지 왔습니다.\n아직도 많이 부족하지만 꼭 도전하고 싶었습니다.\n늘 HMG DXC에서 새로운 과정 최초 도전은 기대->당황->성장->자신감 순서인데\nN Advanced쯤 오니 더 빠르고 부드럽게, 더 아반떼N을 잘 다루고 싶은 욕심이 넘쳐나게 되었습니다.\n여전히 배울게 많고 많이 부족하지만, 조금이나마 성장해 가는 스스로의 모습에 너무 행복하고 즐거웠습니다.\n소중한 피드백 영상과 피드백 내용은 계속해서 반복하여, 내년 더 성장하여 다음 단계로 나아가고 싶습니다!\n올 한해 모터스포츠라는 꿈같은 취미가 생겼습니다"</string>


    <string name="schedule_title">일정 안내</string>
    <string name="schedule_iv_info_description">schedule_iv_info</string>
    <string name="schedule_info_tooltip">항목을 터치해 상세한 일정을\n확인할 수 있습니다.</string>

    <string name="notice">공지사항</string>
    <string name="notice_image_description">notice_image</string>

    <string name="mypage_title">마이페이지</string>
    <string name="mypage_signin_notice">예약하려면 로그인해주세요.</string>
    <string name="mypage_signin_explain">로그인하시면 예약 정보와 이전의 참여 정보를 확인하실 수 있습니다.</string>
    <string name="mypage_name_unit">님</string>
    <string name="mypage_greeting">안녕하세요!</string>
    <string name="mypage_change_info_btn"><u>내 정보 수정</u></string>
    <string name="mypage_expected_start">참여 예정</string>
    <string name="mypage_expected_middle">프로그램이</string>
    <string name="mypage_expected_end">건 있습니다.</string>
    <string name="mypage_expected_more_btn"><u>더보기</u></string>
    <string name="mypage_expected_status_pay_fin">결제완료</string>
    <string name="mypage_expected_status_participate_fin">참여완료</string>
    <string name="mypage_fin_cnt_title">참여 이력</string>
    <string name="mypage_comment_title">최근 댓글</string>
    <string name="mypage_logout_btn"><u>로그아웃</u></string>
    <string name="mypage_level_description">mypage_level</string>
    <string name="mypage_icon_arrow_description">mypage_icon_arrow</string>
    <string name="mypage_dialog_signout">로그아웃 하시겠습니까?</string>
    <string name="mypage_toast_signout">로그아웃 되었습니다.</string>
    <string name="mypage_toast_signin">로그인 되었습니다.</string>
    <string name="mypage_level_info_tooltip">본 서비스를 통해 드라이빙 익스피리언스를 예약하고\n최종적으로 이수한 프로그램의 레벨입니다.</string>
    <string name="mypage_comment_null">최근에 작성된 댓글이 없습니다.</string>
    <string name="mypage_program_null">참여 예정인 프로그램이 없습니다.</string>

    <string name="queue_waiting">접속 대기 중입니다.</string>
    <string name="queue_waiting_explain">동시 사용자가 많아 대기 중입니다.\n잠시 기다리시면 자동으로 예약화면으로 이동합니다.</string>
    <string name="queue_waiting_unit">명이 대기 중입니다.</string>
    <string name="queue_icon_person_description">queue_icon_person</string>

    <string name="dialog_cancel">취소</string>
    <string name="dialog_ok">확인</string>

    <string name="reservation_title">예약</string>
    <string name="reservation_explain">원하시는 방법으로 간편하게 예약하세요.</string>
    <string name="reservation_category_program">프로그램</string>
    <string name="reservation_category_date">날짜</string>
    <string name="reservation_category_car">차량</string>
    <string name="reservation_category_explain">먼저 선택하기</string>
    <string name="reservation_iv_program_description">reservation_iv_program</string>
    <string name="reservation_iv_date_description">reservation_iv_date</string>
    <string name="reservation_iv_car_description">reservation_iv_car</string>
    <string name="reservation_next_btn">다음</string>
    <string name="reservation_step">STEP %1$d</string>
    <string name="reservation_title_experience">드라이빙 익스피리언스</string>
    <string name="reservation_title_pleasure">드라이빙 플레저</string>
    <string name="reservation_title_car_date">차량 및 날짜</string>
    <string name="reservation_title_session_headcount">회차 및 인원</string>
    <string name="reservation_title_session">회차</string>
    <string name="reservation_title_headcount">인원</string>
    <string name="reservation_title_participation">본인 참가 여부</string>
    <string name="reservation_title_hyundai">현대</string>
    <string name="reservation_title_kia">기아</string>
    <string name="reservation_title_genesis">제네시스</string>
    <string name="reservation_title_hmg">HMG</string>
    <string name="reservation_title_taxi">택시</string>
    <string name="reservation_avante_n">아반떼 N</string>
    <string name="reservation_avante_n_line">아반떼 N Line</string>
    <string name="reservation_bottom_program">%1$s\n%2$s</string>
    <string name="reservation_price_title">결제 예정 금액 (부가세 포함)</string>
    <string name="reservation_price">가격</string>
    <string name="reservation_price_unit">원</string>
    <string name="reservation_minus_btn">-</string>
    <string name="reservation_plus_btn">+</string>
    <string name="reservation_headcount_participation">%1$d명 ∙ 본인 참가</string>
    <string name="reservation_headcount_non_participation">%1$d명 ∙ 본인 미참가</string>
    <string name="reservation_participation_btn">참가</string>
    <string name="reservation_non_participation_btn">미참가</string>
    <string name="reservation_notice">※ 유효한 운전면허증 미 지참 시 참여불가</string>
    <string name="reservation_status_able">예약가능</string>
    <string name="reservation_status_sold_out">매진</string>
    <string name="reservation_status_scheduled">예정</string>기
    <string name="reservation_pay_btn">결제하기</string>
    <string name="reservation_icon_refresh_description">reservation_icon_refresh</string>
    <string name="reservation_icon_arrow_description">reservation_icon_arrow</string>
    <string name="reservation_need_login_toast">로그인이 필요합니다.</string>
    <string name="reservation_ask">예약을 확정하시겠습니까?</string>
    <string name="reservation_dialog_reset">선택을 초기화 하시겠습니까?</string>
    <string name="reservation_dialog_reset_btn">초기화</string>
    <string name="reservation_dialog_reset_result">초기화 되었습니다.</string>
    <string name="reservation_dialog_pay">결제하시겠습니까?</string>
    <string name="reservation_dialog_pay_result">결제되었습니다.</string>
    <string name="reservation_program_tooltip">항목을 터치해 프로그램을 선택하세요.</string>
    <string name="reservation_next_tooltip">버튼을 눌러 다음 조건 선택으로 이동하세요.</string>
    <string name="reservation_car_date_tooltip">항목을 터치해 차량과 날짜를 선택하세요.</string>
    <string name="reservation_session_headcount_tooltip">회차 선택 후, 인원 수를 선택할 수 있습니다.</string>

    <string name="joined_program_detail_tv_title">예약 정보</string>
    <string name="joined_program_detail_tv_id_title">예약번호</string>
    <string name="joined_program_detail_tv_program_title">프로그램</string>
    <string name="joined_program_detail_tv_car_title">탑승차량</string>
    <string name="joined_program_detail_tv_participants_title">참가인원</string>
    <string name="joined_program_detail_tv_date_title">시작일시</string>
    <string name="joined_program_detail_tv_positive">확인</string>

    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="n_advanced">N Advanced</string>
    <string name="n_masters">N Masters</string>
    <string name="off_road">Off Road</string>
    <string name="empty_list_title">죄송합니다.\n현재 예약 가능한 항목이 없습니다.</string>
    <string name="empty_list_btn">메인으로 돌아가기</string>
</resources>