<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_center"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top_center"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.275" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom_center"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.775" />

        <ImageView
            android:id="@+id/iv_experience_background"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/program_iv_top_description"
            android:scaleType="centerCrop"
            android:src="@drawable/program_iv_top"
            app:layout_constraintBottom_toTopOf="@id/gl_center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/program_tv_experience_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            android:text="@string/program_experience_top"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/program_tv_experience_bottom"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/program_tv_experience_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            android:text="@string/program_experience_bottom"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/gl_top_center"
            app:layout_constraintStart_toStartOf="@id/program_tv_experience_top" />

        <TextView
            android:id="@+id/program_tv_experience_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/hdharmony_light"
            android:includeFontPadding="false"
            android:lineSpacingExtra="6dp"
            android:text="@string/program_experience_content"
            android:textColor="@color/gray1"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/program_tv_experience_top"
            app:layout_constraintTop_toBottomOf="@id/program_tv_experience_bottom" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@id/gl_top_center"
            app:layout_constraintBottom_toBottomOf="@id/gl_top_center"
            android:contentDescription="@string/program_icon_arrow_description"
            android:src="@drawable/program_icon_arrow" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/program_iv_bottom_description"
            android:scaleType="centerCrop"
            android:src="@drawable/program_iv_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gl_center" />

        <TextView
            android:id="@+id/program_tv_pleasure_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            android:text="@string/program_pleasure_top"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/program_tv_pleasure_bottom"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/program_tv_pleasure_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/pretendard_bold"
            android:includeFontPadding="false"
            android:text="@string/program_pleasure_bottom"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/gl_bottom_center"
            app:layout_constraintStart_toStartOf="@id/program_tv_pleasure_top" />

        <TextView
            android:id="@+id/program_tv_pleasure_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/hdharmony_light"
            android:includeFontPadding="false"
            android:lineSpacingExtra="6dp"
            android:text="@string/program_pleasure_content"
            android:textColor="@color/gray1"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/program_tv_pleasure_top"
            app:layout_constraintTop_toBottomOf="@id/program_tv_pleasure_bottom" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toTopOf="@id/gl_bottom_center"
            app:layout_constraintBottom_toBottomOf="@id/gl_bottom_center"
            android:contentDescription="@string/program_icon_arrow_description"
            android:src="@drawable/program_icon_arrow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>