<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/iv_signin_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="-700dp"
        android:paddingEnd="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/signin_iv_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_signup_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_id_label"
        android:textColor="@color/white"
        android:layout_marginStart="34dp"
        android:layout_marginTop="86dp"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_signup_id"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/signup_id_hint"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:textSize="12sp"
        android:fontFamily="@font/hdharmony_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_id_label"/>

    <TextView
        android:id="@+id/tv_id_double"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="34dp"
        android:text="@string/signup_id_double"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintTop_toBottomOf="@id/et_signup_id"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_signup_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="10dp"
        android:text="@string/signup_name_label"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintTop_toBottomOf="@id/tv_id_double"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_signup_name"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/signup_name_hint"
        android:textColorHint="@color/white"
        android:inputType="textPersonName"
        android:textSize="12sp"
        android:fontFamily="@font/hdharmony_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_name_label"/>

    <TextView
        android:id="@+id/tv_signup_password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="32dp"
        android:text="@string/signup_password_label"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintTop_toBottomOf="@id/et_signup_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_signup_password"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/signup_password_hint"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:fontFamily="@font/hdharmony_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_password_label"/>

    <TextView
        android:id="@+id/tv_signup_password_check_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/signup_password_check_label"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintTop_toBottomOf="@id/et_signup_password"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_signup_password_check"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/signup_password_check_hint"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:fontFamily="@font/hdharmony_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_password_check_label"/>

    <TextView
        android:id="@+id/tv_password_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="34dp"
        android:text="@string/signup_password_alert"
        android:textColor="@color/red"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_regular"
        app:layout_constraintTop_toBottomOf="@id/et_signup_password_check"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/signup_button"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_bold"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>