<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:background="@color/black">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hdharmony_light"
        android:includeFontPadding="false"
        android:textColor="@color/gray6"
        android:textSize="16sp"
        android:text="@string/empty_list_title"
        android:lineSpacingExtra="8sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_bold"
        android:includeFontPadding="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:text="@string/empty_list_btn"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="@id/tv_title"/>

    <ImageView
        android:id="@+id/iv_icon_arrow"
        android:layout_width="14dp"
        android:layout_height="14dp"
        android:src="@drawable/icon_arrow_small"
        app:layout_constraintStart_toEndOf="@id/tv_btn"
        app:layout_constraintTop_toTopOf="@id/tv_btn"
        app:layout_constraintBottom_toBottomOf="@id/tv_btn"
        android:contentDescription="@string/mypage_icon_arrow_description"
        android:layout_marginStart="4dp"/>

    <View
        android:id="@+id/v_btn"
        android:layout_width="160dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="@id/tv_btn"
        app:layout_constraintEnd_toEndOf="@id/iv_icon_arrow"
        app:layout_constraintTop_toTopOf="@id/tv_btn"
        app:layout_constraintBottom_toBottomOf="@id/tv_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>